--- a/index.html
+++ b/index.html
@@ -353,7 +353,7 @@
                 <div class="col-md-4 mb-4">
                     <div class="card artist-card h-100">
                         <div class="card-body">
-                            <img src="imágenes/1756696892725.jpg" alt="DJ ChaCha" class="artist-img mb-3">
+                            <img src="imagenes/1756696892725.jpg" alt="DJ ChaCha" class="artist-img mb-3">
                             <h3 class="card-title">Alcohólika</h3>
                             <p class="card-text">Puro metal que despierta la adrenalina y enciende los sentidos.
 Riffs contundentes, voces intensas y un poder que retumba sin límites.
