--- a/index.html
+++ b/index.html
@@ -789,7 +789,7 @@ Una experiencia auténtica y demoledora que deja huella en cada escenario.</p>
                 }
                 
                 // Crear el mensaje con la estructura solicitada
-                let mensaje = `Correo:${correo}. Quiero ${cantidad} boleto(s) de ${tipoBoleto} a precio de $${precio} cada uno.`;
+                let mensaje = `Correo:${correo}. Quiero ${cantidad} boleto(s) de ${tipoBoleto} a precio de ${precio}bs cada uno.`;
                 
                 // Agregar mensaje adicional si existe
                 if (mensajeAdicional.trim() !== '') {
