--- a/index.html
+++ b/index.html
@@ -540,10 +540,10 @@ Una experiencia auténtica y demoledora que deja huella en cada escenario.</p>
                             <h4 class="card-title">40 bs</h4>
                            <!-- <p class="card-text">Acceso para el evento</p>-->
                             <ul class="list-unstyled mb-4">
-                                <li><i class="fas fa-check text-success me-2"></i>Acceso a todos los escenarios</li>
-                                <li><i class="fas fa-check text-success me-2"></i>Participación en talleres</li>
+                                <li><i class="fas fa-check text-success me-2"></i>Acceso entrada</li>
+                  <!--              <li><i class="fas fa-check text-success me-2"></i>Participación en talleres</li>-->
                                 <li><i class="fas fa-times text-danger me-2"></i>Área VIP</li>
-                                <li><i class="fas fa-times text-danger me-2"></i>Estacionamiento</li>
+                   <!--             <li><i class="fas fa-times text-danger me-2"></i>Estacionamiento</li>-->
                             </ul>
                             <button class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#whatsappModal" data-tipo="Pase General 40" data-precio="25">Comprar</button>
                         </div>
@@ -559,10 +559,10 @@ Una experiencia auténtica y demoledora que deja huella en cada escenario.</p>
                             <h4 class="card-title">70 bs</h4>
                           <!--  <p class="card-text">Acceso para los tres días del festival</p>-->
                             <ul class="list-unstyled mb-4">
-                                <li><i class="fas fa-check text-success me-2"></i>Acceso a todos los escenarios</li>
-                                <li><i class="fas fa-check text-success me-2"></i>Participación en talleres</li>
+                                <li><i class="fas fa-check text-success me-2"></i>Acceso</li>
+                    <!--            <li><i class="fas fa-check text-success me-2"></i>Participación en talleres</li>-->
                                 <li><i class="fas fa-check text-success me-2"></i>Área VIP</li>
-                                <li><i class="fas fa-times text-danger me-2"></i>Estacionamiento</li>
+                                <li><i class="fas fa-check text-danger me-2"></i>compra 10 entradas incluye 2 jarras</li>
                             </ul>
                             <button class="btn btn-warning" data-bs-toggle="modal" data-bs-target="#whatsappModal" data-tipo="Pase Vip" data-precio="70">Comprar</button>
                         </div>
@@ -578,12 +578,12 @@ Una experiencia auténtica y demoledora que deja huella en cada escenario.</p>
                             <h4 class="card-title">700 bs  "limitado"</h4>
                             <p class="card-text">Experiencia completa del festival</p>
                             <ul class="list-unstyled mb-4">
-                                <li><i class="fas fa-check text-success me-2"></i>Acceso a todos los escenarios</li>
-                                <li><i class="fas fa-check text-success me-2"></i>Participación en talleres</li>
+                                <li><i class="fas fa-check text-success me-2"></i>Acceso</li>
+                                <li><i class="fas fa-check text-success me-2"></i>1 Trago</li>
                                 <li><i class="fas fa-check text-success me-2"></i>Área VIP</li>
-                                <li><i class="fas fa-check text-success me-2"></i>Estacionamiento incluido</li>
-                                <li><i class="fas fa-check text-success me-2"></i>Meet & Greet con artistas</li>
-                            </ul>
+                  <!--              <li><i class="fas fa-check text-success me-2"></i>Estaciona</li>-->
+                    <!--            <li><i class="fas fa-check text-success me-2"></i>Meet & Greet con artistas</li>
+                   -->         </ul>
                             <button class="btn btn-success" data-bs-toggle="modal" data-bs-target="#whatsappModal" data-tipo="Pase Super Vip" data-precio="700">Comprar</button>
                         </div>
                     </div>
